--- a/package.json
+++ b/package.json
@@ -3,17 +3,25 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "test": "DEBUG=myapp:* node ./bin/www"
+    "start": "nodemon ./bin/www",
+    "test": "DEBUG=myapp:* nodemon ./bin/www"
   },
   "dependencies": {
+    "babel-core": "6.24.1",
+    "babel-loader": "7.0.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
+    "nodemon": "1.11.0",
+    "react": "15.5.4",
+    "react-dom": "15.5.4",
     "request": "2.81.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "webpack": "2.4.1"
   }
 }
