--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
+    "es6-promise": "4.1.0",
     "express": "~4.13.4",
+    "isomorphic-fetch": "2.2.1",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "nodemon": "1.11.0",
+    "query-string": "4.3.4",
     "react": "15.5.4",
     "react-dom": "15.5.4",
     "request": "2.81.0",
