--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "15.5.4",
     "react-dom": "15.5.4",
     "request": "2.81.0",
+    "request-promise": "4.2.0",
     "serve-favicon": "~2.3.0",
     "webpack": "2.4.1"
   }
