--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "query-string": "4.3.4",
     "react": "15.5.4",
     "react-dom": "15.5.4",
+    "redux": "3.6.0",
+    "redux-thunk": "2.2.0",
     "request": "2.81.0",
     "request-promise": "4.2.0",
     "serve-favicon": "~2.3.0",
